kubernetes/infrastructure/network/gateway/rate-limit-policies.yaml
---
# Grafana
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: grafana-rate-limit
  namespace: grafana
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana-envoy
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 300
            unit: Minute
          clientSelectors:
            - headers:
                - name: CF-Connecting-IP
                  type: Distinct
---
# ArgoCD
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: argocd-rate-limit
  namespace: argocd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: argocd
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 200
            unit: Minute
          clientSelectors:
            - headers:
                - name: CF-Connecting-IP
                  type: Distinct
---
# Keycloak
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: keycloak-rate-limit
  namespace: keycloak
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: keycloak
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 100
            unit: Minute
          clientSelectors:
            - headers:
                - name: CF-Connecting-IP
                  type: Distinct
---
# GitLab
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: gitlab-rate-limit
  namespace: gitlab-runner
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gitlab
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 300
            unit: Minute
          clientSelectors:
            - headers:
                - name: CF-Connecting-IP
                  type: Distinct
---
# Kibana
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: kibana-rate-limit
  namespace: elastic-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kibana
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 200
            unit: Minute
          clientSelectors:
            - headers:
                - name: CF-Connecting-IP
                  type: Distinct
